create table if not exists dictionary_meta (
    tenant_id varchar(128) not null,
    dict_code varchar(128) not null,
    version bigint not null,
    last_source_revision bigint null,
    updated_at timestamp with time zone not null,
    primary key (tenant_id, dict_code)
);

create table if not exists dictionary_item (
    tenant_id varchar(128) not null,
    dict_code varchar(128) not null,
    item_key varchar(512) not null,
    payload text not null,
    deleted boolean not null default false,
    updated_at timestamp with time zone not null,
    primary key (tenant_id, dict_code, item_key)
);

create table if not exists processed_event (
    tenant_id varchar(128) not null,
    event_id varchar(128) not null,
    source varchar(32) not null,
    processed_at timestamp with time zone not null,
    primary key (tenant_id, event_id)
);

create table if not exists update_request (
    tenant_id varchar(128) not null,
    event_id varchar(128) not null,
    dict_code varchar(128) not null,
    status varchar(32) not null,
    event_type varchar(32) not null,
    snapshot_id varchar(128) null,
    committed_version bigint null,
    error_message varchar(2048) null,
    created_at timestamp with time zone not null,
    updated_at timestamp with time zone not null,
    primary key (tenant_id, event_id)
);

create table if not exists outbox_event (
    id bigint generated by default as identity primary key,
    tenant_id varchar(128) not null,
    event_id varchar(128) not null,
    dict_code varchar(128) not null,
    version bigint not null,
    payload text not null,
    created_at timestamp with time zone not null,
    published boolean not null default false,
    published_at timestamp with time zone null
);

create index if not exists idx_outbox_event_published on outbox_event(published, id);

create table if not exists snapshot_chunk (
    tenant_id varchar(128) not null,
    dict_code varchar(128) not null,
    snapshot_id varchar(128) not null,
    chunk_index integer not null,
    chunks_total integer not null,
    items_payload text not null,
    created_at timestamp with time zone not null,
    primary key (tenant_id, dict_code, snapshot_id, chunk_index)
);
